# Cpp_Labs

./: CMakeLists.txt  README.md
Lab4/: CMakeLists.txt  Camera.cpp  Camera.h  main.cpp
Lab5/: Atom.cpp  Atom.h  Molecule.cpp  Molecule.h
Lab6/: CMakeLists.txt  Fraction.cpp  Fraction.h  main.cpp
Lab7/: CMakeLists.txt  Household.cpp  Household.h  Magnitophone.cpp  Magnitophone.h  MusicalCentre.cpp  MusicalCentre.h  Radio.cpp  Radio.h  Television.cpp  Television.h  VacuumCleaner.cpp  VacuumCleaner.h  WashingMashine.cpp  WashingMashine.h  main.cpp
Lab8/: CMakeLists.txt  Resistor.cpp  Resistor.h  main.cpp
