cmake_minimum_required(VERSION 3.17)
project(Lab7Chelyuk)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lab7Chelyuk main.cpp WashingMashine.cpp WashingMashine.h Household.cpp Household.h VacuumCleaner.cpp VacuumCleaner.h Television.cpp Television.h Magnitophone.cpp Magnitophone.h Radio.cpp Radio.h MusicalCentre.cpp MusicalCentre.h)